--- a/signup.html
+++ b/signup.html
@@ -98,6 +98,6 @@
     <button type="submit">Sign Up</button>
 
     <a href="index.html" class="back-link">&larr; Back to Home</a>
-  </form>
+  <form action="loading.html" onsubmit="return validateForm()">
 </body>
 </html>
