--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #f1ece6;
       color: #333;
       display: flex;
       flex-direction: column;
@@ -174,7 +174,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2008–2025 kalihub. All rights reserved.
+    &copy; 2025 kalihub. All rights reserved. kalihub is Kalimonade.
   </footer>
 </body>
 </html>
