--- a/authorize.html
+++ b/authorize.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Authorize App</title>
+  <title>kalihub auth</title>
   <style>
     body {
       background-color: #f1ece6;
@@ -16,6 +16,7 @@
       height: 100vh;
       padding: 20px;
       text-align: center;
+      margin: 0;
     }
 
     h1 {
@@ -76,20 +77,50 @@
       color: #444;
       border-color: #aaa;
     }
+
+    /* Spinner overlay styles */
+    #spinnerOverlay {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .spinner {
+      border: 6px solid #ccc;
+      border-top: 6px solid #333;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg);}
+      100% { transform: rotate(360deg);}
+    }
   </style>
 </head>
 <body>
+  <!-- Loading spinner overlay -->
+  <div id="spinnerOverlay">
+    <div class="spinner"></div>
+  </div>
+
+  <!-- Actual authorize content -->
   <h1>
     Are you sure you want to authorize <span class="italic">kalihub social</span>?
   </h1>
 
-  <p>This app is requesting to access your kalihub account.
+  <p>This app is requesting to access your kalihub account.</p>
   
   <p><strong>What <span class="italic">kalihub social</span> will have access to:</strong></p>
   <ul>
     <li>Read your display name and username</li>
-   
-     <li>Read your profile picture</li>
+    <li>Read your profile picture</li>
   </ul>
 
   <div class="button-row">
@@ -98,6 +129,13 @@
   </div>
 
   <script>
+    // Show spinner for 1 second then reveal content
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById('spinnerOverlay').style.display = 'none';
+      }, 1000);
+    };
+
     function authorize() {
       localStorage.setItem("kalihub_user", "example_user");
       window.opener.postMessage({ status: "authorized", user: "example_user" }, "*");
